chloe collection achievement lists

--- a/content/projects/chloe-collection-fo1/main.mdx
+++ b/content/projects/chloe-collection-fo1/main.mdx
@@ -60,6 +60,37 @@ Designed with customizability in mind, this mod is open-source and includes many
 - Verbose LUA errors
 - WIP support for widescreen and ultrawide screens, a lot of menus have been redesigned to support a dynamic aspect ratio
 
+# Achievements
+
+- Big Earner - Earn over $4000 from a single career race
+- Blast Master - Get 500 crash bonuses
+- Car Collector - Unlock all cars in the game
+- Carnage Master - Complete Arcade Mode
+- Carnage Millionaire - Earn 1,000,000 points in Arcade Mode
+- Carnage Wizard - Complete Arcade Mode with all gold
+- Community-Run - Purchase a car with a custom livery
+- Dead Man Walking - Win a race on less than 25% health
+- First Blood - Wreck a car in multiplayer
+- FlatOut Map Veteran - Win an event on every track
+- Friendly Competition - Win a multiplayer race
+- Glass Cannon - Win a Survival Derby with the Pepper
+- Killing Spree - Get a 5 frag streak in Frag Derby
+- Like an Angel - Get a strike in Bowling
+- Makin' it Big - Reach a total balance of $50,000
+- Not a Scratch - Win a race without taking any damage
+- Overkill - Get 10 separate bonuses in a single combo
+- Race Master - Complete career mode
+- Race Wizard - Complete career mode with all gold
+- Real Habanero - Win the Bronze Finals with a stock Pepper
+- Smashy Smash - Destroy 1,000 roadside objects
+- Speedrunner - Gold an Arcade Mode event in less than 1:30
+- Starting Point - Win a race
+- Takedown - Wreck an opponent in a race
+- Trackmaster - Achieve an author score
+- Unfriendly Competition - Get 200 crash bonuses in multiplayer
+- Windshield Tester - Get ejected 25 times
+- Your Own Jukebox - Change a music playlist
+
 # Credits
 
 - xInfamousRYANx - panels.ini for the new cars
@@ -70,6 +101,7 @@ Designed with customizability in mind, this mod is open-source and includes many
   
 # Known issues
 
+- AI is incompetent on some reversed tracks
 - Other languages are not supported, you can and will see English text interspersed between localized text
   
 # Source code
