--- a/content/projects/chloe-collection/main.mdx
+++ b/content/projects/chloe-collection/main.mdx
@@ -82,6 +82,7 @@ Designed with customizability in mind, this mod is open-source and includes many
 # Achievements
 
 - Aspiring Rally Driver - Win a rally cup
+- Blast Master - Get 1000 crash bonuses
 - Boat Award - Win a rally stage with the Saab 96
 - Burning Rubber - Play 3 drift events
 - Canal Map Veteran - Win an event on every Canal track
@@ -100,6 +101,7 @@ Designed with customizability in mind, this mod is open-source and includes many
 - First Blood - Wreck a car in multiplayer
 - Forest Map Veteran - Win an event on every Forest track
 - Friendly Competition - Win a multiplayer race
+- Glass Cannon - Win a derby with the Trabant 601
 - Hit it Big - Get a flush in Royal Flush
 - Home Run! - Get a home run in Baseball
 - Jack Benton is Wrecked - You know what to do.
@@ -108,6 +110,7 @@ Designed with customizability in mind, this mod is open-source and includes many
 - Ludicrous Speed - Reach a speed of 500KM/H
 - Makin' it Big - Reach a total balance of 100,000CR
 - Not a Scratch - Win a race without taking any damage
+- Out of Soda - Knock Neville into water
 - Picky Buyer - Purchase a car's alternate variant
 - Pit Map Veteran - Win an event on every Pit track
 - Professional Drifter - Get 100,000pts in one drift chain
