--- a/content/projects/chloe-collection-fo1/changelog/115.mdx
+++ b/content/projects/chloe-collection-fo1/changelog/115.mdx
@@ -9,6 +9,7 @@ export const metadata = {
 - Added more tips to the time trial loading screen
 - Fixed achievements carrying over to newly created saves
 - Fixed score popups triggering at the start of arcade events sometimes
+- Fixed the career car stats menu always being empty
 - Overhead icons in derbies now always show above the player, even if they're flipped upside down
 - Player positions are now updated even after you finish the race
 - Removed some unrelated loading screen tips from stunt mode
