--- a/content/projects/chloe-collection-fo1/main.mdx
+++ b/content/projects/chloe-collection-fo1/main.mdx
@@ -8,7 +8,7 @@ export const metadata = {
 
 A complete overhaul of FlatOut with many quality-of-life features.
 
-This mod was built from the ground-up with my own tooling, including single-handedly reverse-engineering the track format and the car model format.  
+This mod was built from the ground-up with my own tooling, including single-handedly reverse-engineering the track format, collision format and the car model format.  
 
 Designed with customizability in mind, this mod is open-source and includes many small improvements upon the game's code that come together to make adding your own changes a lot less of a hassle.
 
