--- a/content/projects/fo2-custommp/changelog/108.mdx
+++ b/content/projects/fo2-custommp/changelog/108.mdx
@@ -7,3 +7,4 @@ export const metadata = {
 - Fixed some small issues with text drawing after the last update
 - Fixed the menu after finishing a pong race having a Continue Race option
 - Removed automatic result calculation, player times are now only shown once they finish the race
+- Removed support for Selo's Car Pack
