--- a/content/projects/chloe-collection-fo1/changelog/120.mdx
+++ b/content/projects/chloe-collection-fo1/changelog/120.mdx
@@ -6,6 +6,7 @@ export const metadata = {
 
 - Added a new minimap style based on FlatOut 2 which zooms in around the player instead of showing the whole map
 - Added a new music playlist that allows you to manually mix and match any song from any playlist, currently only accessible via the F5 menu
+- Added a new song to the Chloe Collection OST, Pieces by Hoobastank
 - Added a playlist selector into Sound Options in the pause menu
 - Added back the respawn position icon on the minimap
 - Crash bonuses are now awarded while wrecked in Frag Derby
