chloe collection fo1 1.22

--- a/content/projects/chloe-collection-fo1/changelog/122.mdx
+++ b/content/projects/chloe-collection-fo1/changelog/122.mdx
@@ -2,11 +2,16 @@ export const metadata = {
 	"image": "/img/chloe-collection-fo1-upd-121_5.png"
 }
 
-# v1.21.5
+# v1.22
 
 - Added 3 more events to Arcade Mode
+- Added custom icons for the FlatOut 2 tracks
+- Added loading screen backgrounds for the FlatOut 2 derby tracks
 - Added Timberlands 2, Timberlands 3 and Skyscraper Derby from FlatOut 2
 - Changed the startpoints for Gas Station Derby to make a full circle
+- Fixed a crash when starting stunt events
 - Fixed some types of props not giving any points in Demolition
 - Fixed the AI having slightly different physics when using the Professional or Hardcore handling modes
 - Fixed the minimap image being wrong in FlatOut 2 mode if a custom map was loaded after a vanilla one
+- Fixed the music player popup being stretched on widescreen resolutions
+- Improved the strength of file integrity checks in multiplayer
