--- a/content/projects/chloe-collection/main.mdx
+++ b/content/projects/chloe-collection/main.mdx
@@ -139,7 +139,7 @@ Designed with customizability in mind, this mod is open-source and includes many
   
 # Credits
 
-- selo920 - camera.ini for FO1 cars, collisions for FO1 tracks
+- selo920 - camera.ini for FO1 cars
 - Mutacja - car skins, minimaps for FO1 tracks, Retro Demo tracks and Tough Trucks tracks
 - xInfamousRYANx - panels.ini for FO1 and FO2 cars
 - Cordo - descriptions for the new cars, pacenotes for some rally stages, time trial medal times for Professional handling and Super Author times for rally stages
