--- a/content/projects/chloe-collection-fo1/main.mdx
+++ b/content/projects/chloe-collection-fo1/main.mdx
@@ -109,8 +109,9 @@ Designed with customizability in mind, this mod is open-source and includes many
   
 # Known issues
 
-- AI is incompetent on some reversed tracks
+- AI is incompetent on some custom and reversed tracks
 - Other languages are not supported, you can and will see English text interspersed between localized text
+- The mod will crash and/or have major graphical artifacts on Intel integrated GPUs, this is a driver problem and can't be fixed
 - Tough Trucks maps have some minor graphical issues such as flickering lighting on some fences
   
 # Source code
