--- a/content/projects/chloe-collection-fo1/main.mdx
+++ b/content/projects/chloe-collection-fo1/main.mdx
@@ -8,7 +8,11 @@ export const metadata = {
 
 A complete overhaul of FlatOut with many quality-of-life features.
 
-This mod was built from the ground-up with my own tooling, including single-handedly reverse-engineering the track format, collision format and the car model format.  
+This mod was built from the ground-up with my own tooling, including single-handedly reverse-engineering the track format, track collision format and the car model format.  
+This makes this mod the first of its kind for the game, as fully custom tracks for any FlatOut game were completely impossible before.
+
+I have also hacked the game itself to hell and back in order to allow for features such as online multiplayer, new gamemodes, upgrades for opponents, and a lot more. 
+I've also added near-perfect support for ultrawide aspect ratios, including proper scaling of the menus, UI and in-game FOV.
 
 Designed with customizability in mind, this mod is open-source and includes many small improvements upon the game's code that come together to make adding your own changes a lot less of a hassle.
 
