update chloe collection install

--- a/content/projects/chloe-collection-fo1/main.mdx
+++ b/content/projects/chloe-collection-fo1/main.mdx
@@ -18,9 +18,9 @@ Designed with customizability in mind, this mod is open-source and includes many
 
 # Installation
 
-- Make sure you have v1.1 of the game, as this is the only version this plugin is compatible with. (exe size of 2822144 bytes)
+- Make sure you have v1.1 of the game, as this is the only version this plugin is compatible with. Note that the GOG release is structured entirely differently for whatever reason and is also incompatible.
 - Plop the files into your game folder.
-- If you get an error message on startup, remove d3d9.dll from the game folder.
+- If you get "Could not obtain native display resolution" on startup, remove d3d9.dll from the game folder.
 - Enjoy, nya~ :3
   
 # Features
