--- a/content/projects/chloe-collection/main.mdx
+++ b/content/projects/chloe-collection/main.mdx
@@ -20,7 +20,7 @@ Designed with customizability in mind, this mod is open-source and includes many
 
 - Make sure you have the Steam GFWL version of the game, as this is the only version this mod is compatible with. (exe size of 4242504 bytes)
 - Plop the files into your game folder.
-- If you get an error message on startup, remove d3d9.dll from the game folder.
+- If you get "Could not obtain native display resolution" on startup, remove d3d9.dll from the game folder.
 - Enjoy, nya~ :3
   
 # Features
