chloe collection fo1 1.31.1

--- a/content/projects/chloe-collection-fo1/changelog/131.mdx
+++ b/content/projects/chloe-collection-fo1/changelog/131.mdx
@@ -1,9 +1,10 @@
 export const metadata = {
-	"image": "/img/chloe-collection-fo1.png"
+	"image": "/img/chloe-collection-fo1-upd-131.png"
 }
 
 # v1.31
 
+- Added community score targets to some Arcade Mode events
 - Added simple particle effects for nitrous
 - Added the option to repaint cars in your career garage
 - Converted all PNG textures to TGA, hopefully finally fixing texture loading related crashes
