--- a/content/projects/chloe-collection-fo1/changelog/132.mdx
+++ b/content/projects/chloe-collection-fo1/changelog/132.mdx
@@ -1,5 +1,5 @@
 export const metadata = {
-	"image": "/img/chloe-collection-fo1-upd-132.png"
+	"image": "/img/chloe-collection-fo1-upd-132.jpg"
 }
 
 # v1.32
