--- a/content/projects/chloe-collection/main.mdx
+++ b/content/projects/chloe-collection/main.mdx
@@ -147,7 +147,7 @@ Designed with customizability in mind, this mod is open-source and includes many
 - teddyator - car skins, custom splash screen, pride flags, help with the new soundtracks, drawn pacenote icons, pacenotes for some rally stages
 - Mac21Sas - car skins for Neville
 - rowwise - car skins, co-driver voice
-- Claude Yones - playtesting
+- Yellow_Fantom - car skins
 - Bulko - Super Author times for multilap time trials
   
 # Known issues
