--- a/content/projects/chloe-collection/changelog/179.mdx
+++ b/content/projects/chloe-collection/changelog/179.mdx
@@ -7,6 +7,6 @@ export const metadata = {
 - Added 4 new high-quality cars: Toyota Supra, Mazda RX-8, Lancia Delta HF, Mazda RX-7 (Drift King)
 - Added deformation to most bonus cars, including the Siboner 6 and the 4 new cars
 - Added new cheats to unlock hidden content
-- Added new skins for the CTR Sport and the FO1 Fasthammer by teddyator
+- Added new skins for the CTR Sport, Bonecracker and the FO1 Fasthammer by teddyator
 - Added the Judge 5000 SV to Street class
 - Replaced the Woodland Havoc event in Carnage Mode with a Beat the Bomb event on Desert Oil Field
