update chloe collection credits

--- a/content/projects/chloe-collection/main.mdx
+++ b/content/projects/chloe-collection/main.mdx
@@ -150,6 +150,7 @@ Designed with customizability in mind, this mod is open-source and includes many
 - Mac21Sas - car skins for Neville
 - rowwise - car skins, co-driver voice
 - Yellow_Fantom - car skins
+- DEVYATION - car skins
 - Bulko - Super Author times for multilap time trials
   
 # Known issues
@@ -178,6 +179,9 @@ My tool for editing cars & tracks: https://github.com/gaycoderprincess/FlatOutW3
 My tool for editing the game's database: https://github.com/gaycoderprincess/FlatOut2DBTool/releases  
 My tool for fixing washed-out and invalid FlatOut DDS files: https://github.com/gaycoderprincess/FlatOutUCDDSFixer/releases  
 xNyaDev's bfstool for packing BFS files: https://github.com/xNyaDev/bfstool  
+NFS AssetDumper for maps from NFS Underground 2 and ProStreet: https://github.com/NFSTools/NFS-ModTools  
+NFS-CarToolkit for cars from NFS ProStreet: https://nfs-tools.blogspot.com/p/downloads.html  
+Blender I/O tools for NFS Most Wanted 2012 and Burnout Paradise: https://drive.google.com/drive/folders/10DGQFPF6aeco2tUxp6MBfSidR-8lhNxe  
 
 # Disclaimer
 
