move fo2 custommp to mega

--- a/content/downloads.mdx
+++ b/content/downloads.mdx
@@ -34,7 +34,7 @@ FlatOut: Ultimate Carnage
 FlatOut 2
 - AI Limit Adjuster: https://github.com/gaycoderprincess/FlatOut2AILimitAdjuster/releases
 - Car Limit Adjuster: https://github.com/gaycoderprincess/FlatOut2CarLimitAdjuster/releases
-- Chloe Online: https://drive.google.com/file/d/1i1SQn8kCT70v7EA5Awg7nOKmdvTg9PrF/view?usp=sharing
+- Chloe Online: https://mega.nz/file/VWUm3L7J#021SjtlvkmsceLr45uRB8ax4KY9k22DxbhJmFccMcl8
 - Controller Support: https://github.com/gaycoderprincess/FlatOut2ControllerSupport/releases
 - FPS Unlocker: https://github.com/gaycoderprincess/FlatOut2FPSUnlocker/releases
 - Ingame DB Editor: https://github.com/gaycoderprincess/FlatOut2IngameDBEditor/releases
