--- a/content/projects/fo2-custommp/main.mdx
+++ b/content/projects/fo2-custommp/main.mdx
@@ -3,7 +3,7 @@ export const metadata = {
     "miniImage": "/img/fo2-custommp.png",
     "name": "FlatOut 2 Chloe Online",
     "lastUpdated": "2025-07-21 21:29",
-    "link": "https://drive.google.com/file/d/1i1SQn8kCT70v7EA5Awg7nOKmdvTg9PrF/view?usp=sharing"
+    "link": "https://mega.nz/file/VWUm3L7J#021SjtlvkmsceLr45uRB8ax4KY9k22DxbhJmFccMcl8"
 }
 
 Plugin to add a custom, more stable and reliable client-server multiplayer mode to FlatOut 2 with extra features such as 127 player lobbies and working AI
