nfs time trial ghosts

--- a/content/downloads.mdx
+++ b/content/downloads.mdx
@@ -66,5 +66,7 @@ Total Immersion Racing
 
 Miscellaneous
 - NFS Most Wanted Lap Glitch Re-Enabler: https://github.com/gaycoderprincess/NFSMWLapGlitch/releases
+- NFS Carbon Time Trial Ghosts: https://github.com/gaycoderprincess/CarbonTimeTrialGhosts/releases
+- NFS Most Wanted Time Trial Ghosts: https://github.com/gaycoderprincess/MostWantedTimeTrialGhosts/releases
 - Takara Music Player: https://github.com/gaycoderprincess/TakaraPlayer/releases
 - Tetrus: https://github.com/gaycoderprincess/Tetrus/releases
