prostreet time trials

--- a/content/downloads.mdx
+++ b/content/downloads.mdx
@@ -66,7 +66,9 @@ Total Immersion Racing
 
 Miscellaneous
 - NFS Most Wanted Lap Glitch Re-Enabler: https://github.com/gaycoderprincess/NFSMWLapGlitch/releases
+- NFS ProStreet Time Trial Ghosts: https://github.com/gaycoderprincess/ProStreetTimeTrialGhosts/releases
 - NFS Carbon Time Trial Ghosts: https://github.com/gaycoderprincess/CarbonTimeTrialGhosts/releases
 - NFS Most Wanted Time Trial Ghosts: https://github.com/gaycoderprincess/MostWantedTimeTrialGhosts/releases
+- NFS Underground 2 Time Trial Ghosts: https://github.com/gaycoderprincess/Underground2TimeTrialGhosts/releases
 - Takara Music Player: https://github.com/gaycoderprincess/TakaraPlayer/releases
 - Tetrus: https://github.com/gaycoderprincess/Tetrus/releases
