--- a/content/projects/nfsc-timetrial/main.mdx
+++ b/content/projects/nfsc-timetrial/main.mdx
@@ -15,4 +15,13 @@ A mod for Need for Speed: Carbon that replaces Quick Race opponents with TrackMa
 - Start the game and launch any race, you will now have a PB ghost to race against instead of AI opponents.
 - Enjoy, nya~ :3
 
+## Features
+
+- A built-in set of events in the Challenge Series to compete with other players on
+- Drift scoring has been fixed, giving you the same amount of points regardless of whether you're using a controller or a keyboard, or have XtendedInput installed
+- Ghosts are timed based on game ticks, meaning speedbreaker is timed in real-time, and the timebug no longer applies anymore
+- Ghosts include a checksum of the player's game files, allowing you to check if someone's made any potentially unfair VLT modifications
+- The mod includes a basic anti-cheat, preventing common methods of cheating
+- The physics tickrate has been locked to 120, meaning Widescreen Fix no longer gives you an unfair advantage
+
 _Last updated: {metadata.lastUpdated}_
