--- a/content/projects/nfsps-timetrial/main.mdx
+++ b/content/projects/nfsps-timetrial/main.mdx
@@ -21,6 +21,7 @@ A mod for Need for Speed: ProStreet that replaces Quick Race opponents with Trac
 - Drift scoring has been fixed, giving you the same amount of points regardless of whether you're using a controller or a keyboard, or have XtendedInput installed
 - Ghosts are timed based on game ticks, meaning the timebug no longer applies anymore
 - Ghosts include a checksum of the player's game files, allowing you to check if someone's made any potentially unfair VLT modifications
+- Ghosts include player inputs, and while they're not directly usable for playback (the game is not deterministic) it can still be used to verify legitimacy
 - Tank Unslapper is included in the mod, enabled by default, and ghosts are cleanly separated by whether they have the steering delay removed or not
 - The mod includes a basic anti-cheat, preventing common methods of cheating
 - The physics tickrate has been locked to 120, meaning Widescreen Fix no longer gives you an unfair advantage
