time trial mod links

--- a/content/projects/nfsc-timetrial/main.mdx
+++ b/content/projects/nfsc-timetrial/main.mdx
@@ -8,6 +8,11 @@ export const metadata = {
 
 A mod for Need for Speed: Carbon that replaces Quick Race opponents with TrackMania-like replays
 
+This mod is also available for:
+- [NFS Underground 2](https://https://gaycoderprincess.github.io/project/nfsug2-timetrial)
+- [NFS Most Wanted](https://https://gaycoderprincess.github.io/project/nfsmw-timetrial)
+- [NFS ProStreet](https://https://gaycoderprincess.github.io/project/nfsps-timetrial)
+
 ## Installation
 
 - Make sure you have v1.4 of the game, as this is the only version this plugin is compatible with. (exe size of 7217152 bytes)
