--- a/content/projects/nfsug2-timetrial/main.mdx
+++ b/content/projects/nfsug2-timetrial/main.mdx
@@ -8,6 +8,11 @@ export const metadata = {
 
 A mod for Need for Speed: Underground 2 that replaces Quick Race opponents with TrackMania-like replays
 
+This mod is also available for:
+- [NFS Most Wanted](https://https://gaycoderprincess.github.io/project/nfsmw-timetrial)
+- [NFS Carbon](https://https://gaycoderprincess.github.io/project/nfsc-timetrial)
+- [NFS ProStreet](https://https://gaycoderprincess.github.io/project/nfsps-timetrial)
+
 ## Installation
 
 - Make sure you have v1.2 of the game, as this is the only version this plugin is compatible with. (exe size of 4800512 bytes)
