--- a/content/projects/nfsmw-timetrial/main.mdx
+++ b/content/projects/nfsmw-timetrial/main.mdx
@@ -8,6 +8,11 @@ export const metadata = {
 
 A mod for Need for Speed: Most Wanted that replaces Quick Race opponents with TrackMania-like replays
 
+This mod is also available for:
+- [NFS Underground 2](https://https://gaycoderprincess.github.io/project/nfsug2-timetrial)
+- [NFS Carbon](https://https://gaycoderprincess.github.io/project/nfsc-timetrial)
+- [NFS ProStreet](https://https://gaycoderprincess.github.io/project/nfsps-timetrial)
+
 ## Installation
 
 - Make sure you have v1.3 of the game, as this is the only version this plugin is compatible with. (exe size of 6029312 bytes)
