--- a/content/projects/nfsps-timetrial/main.mdx
+++ b/content/projects/nfsps-timetrial/main.mdx
@@ -8,6 +8,11 @@ export const metadata = {
 
 A mod for Need for Speed: ProStreet that replaces Quick Race opponents with TrackMania-like replays
 
+This mod is also available for:
+- [NFS Underground 2](https://https://gaycoderprincess.github.io/project/nfsug2-timetrial)
+- [NFS Most Wanted](https://https://gaycoderprincess.github.io/project/nfsmw-timetrial)
+- [NFS Carbon](https://https://gaycoderprincess.github.io/project/nfsc-timetrial)
+
 ## Installation
 
 - Make sure you have v1.1 of the game, as this is the only version this plugin is compatible with. (exe size of 3765248 or 28739656 bytes)
