time trial mod links

--- a/content/projects/nfsmw-timetrial/main.mdx
+++ b/content/projects/nfsmw-timetrial/main.mdx
@@ -9,9 +9,9 @@ export const metadata = {
 A mod for Need for Speed: Most Wanted that replaces Quick Race opponents with TrackMania-like replays
 
 This mod is also available for:
-- [NFS Underground 2](https://https://gaycoderprincess.github.io/project/nfsug2-timetrial)
-- [NFS Carbon](https://https://gaycoderprincess.github.io/project/nfsc-timetrial)
-- [NFS ProStreet](https://https://gaycoderprincess.github.io/project/nfsps-timetrial)
+- [NFS Underground 2](https://gaycoderprincess.github.io/project/nfsug2-timetrial)
+- [NFS Carbon](https://gaycoderprincess.github.io/project/nfsc-timetrial)
+- [NFS ProStreet](https://gaycoderprincess.github.io/project/nfsps-timetrial)
 
 ## Installation
 
