--- a/content/projects/nfsps-timetrial/main.mdx
+++ b/content/projects/nfsps-timetrial/main.mdx
@@ -9,9 +9,9 @@ export const metadata = {
 A mod for Need for Speed: ProStreet that replaces Quick Race opponents with TrackMania-like replays
 
 This mod is also available for:
-- [NFS Underground 2](https://https://gaycoderprincess.github.io/project/nfsug2-timetrial)
-- [NFS Most Wanted](https://https://gaycoderprincess.github.io/project/nfsmw-timetrial)
-- [NFS Carbon](https://https://gaycoderprincess.github.io/project/nfsc-timetrial)
+- [NFS Underground 2](https://gaycoderprincess.github.io/project/nfsug2-timetrial)
+- [NFS Most Wanted](https://gaycoderprincess.github.io/project/nfsmw-timetrial)
+- [NFS Carbon](https://gaycoderprincess.github.io/project/nfsc-timetrial)
 
 ## Installation
 
