--- a/content/projects/nfsug2-timetrial/main.mdx
+++ b/content/projects/nfsug2-timetrial/main.mdx
@@ -9,9 +9,9 @@ export const metadata = {
 A mod for Need for Speed: Underground 2 that replaces Quick Race opponents with TrackMania-like replays
 
 This mod is also available for:
-- [NFS Most Wanted](https://https://gaycoderprincess.github.io/project/nfsmw-timetrial)
-- [NFS Carbon](https://https://gaycoderprincess.github.io/project/nfsc-timetrial)
-- [NFS ProStreet](https://https://gaycoderprincess.github.io/project/nfsps-timetrial)
+- [NFS Most Wanted](https://gaycoderprincess.github.io/project/nfsmw-timetrial)
+- [NFS Carbon](https://gaycoderprincess.github.io/project/nfsc-timetrial)
+- [NFS ProStreet](https://gaycoderprincess.github.io/project/nfsps-timetrial)
 
 ## Installation
 
