update time trial descriptions

--- a/content/projects/nfsc-timetrial/main.mdx
+++ b/content/projects/nfsc-timetrial/main.mdx
@@ -24,7 +24,7 @@ A mod for Need for Speed: Carbon that replaces Quick Race opponents with TrackMa
 - Ghosts include player inputs, and while they're not directly usable for playback (the game is not deterministic) it can still be used to verify legitimacy
 - The mod includes a basic anti-cheat, preventing common methods of cheating
 - The physics tickrate has been locked to 120, meaning Widescreen Fix no longer gives you an unfair advantage
-- The World Level of Detail setting no longer influences prop spawns, keeping everyone on a level playing field with reduced props without the usual lowered texture quality
+- The World Detail setting no longer influences prop spawns, keeping everyone on a level playing field with reduced props without the usual lowered texture quality
 
 This mod is also available for:
 - [NFS Underground 2](https://gaycoderprincess.github.io/project/nfsug2-timetrial)
