nfs undercover time trial

--- a/content/projects/nfsmw-timetrial/main.mdx
+++ b/content/projects/nfsmw-timetrial/main.mdx
@@ -29,6 +29,6 @@ This mod is also available for:
 - [NFS Underground 2](https://gaycoderprincess.github.io/project/nfsug2-timetrial)
 - [NFS Carbon](https://gaycoderprincess.github.io/project/nfsc-timetrial)
 - [NFS ProStreet](https://gaycoderprincess.github.io/project/nfsps-timetrial)
-
+- [NFS Undercover](https://gaycoderprincess.github.io/project/nfsuc-timetrial)
 
 _Last updated: {metadata.lastUpdated}_
