--- a/content/projects/nfsug2-timetrial/main.mdx
+++ b/content/projects/nfsug2-timetrial/main.mdx
@@ -27,5 +27,6 @@ This mod is also available for:
 - [NFS Most Wanted](https://gaycoderprincess.github.io/project/nfsmw-timetrial)
 - [NFS Carbon](https://gaycoderprincess.github.io/project/nfsc-timetrial)
 - [NFS ProStreet](https://gaycoderprincess.github.io/project/nfsps-timetrial)
+- [NFS Undercover](https://gaycoderprincess.github.io/project/nfsuc-timetrial)
 
 _Last updated: {metadata.lastUpdated}_
