--- a/content/projects/nfsc-timetrial/main.mdx
+++ b/content/projects/nfsc-timetrial/main.mdx
@@ -30,6 +30,6 @@ This mod is also available for:
 - [NFS Underground 2](https://gaycoderprincess.github.io/project/nfsug2-timetrial)
 - [NFS Most Wanted](https://gaycoderprincess.github.io/project/nfsmw-timetrial)
 - [NFS ProStreet](https://gaycoderprincess.github.io/project/nfsps-timetrial)
-
+- [NFS Undercover](https://gaycoderprincess.github.io/project/nfsuc-timetrial)
 
 _Last updated: {metadata.lastUpdated}_
