--- a/content/projects/nfsps-timetrial/mini.mdx
+++ b/content/projects/nfsps-timetrial/mini.mdx
@@ -1,5 +1,5 @@
 # [{props.metadata.name}](/project/nfsps-timetrial)
 
-A mod for Need for Speed: ProStreet that replaces Quick Race opponents with TrackMania-like replays
+A mod for Need for Speed: ProStreet that replaces opponents with TrackMania-like replays
 
 _Last updated: {props.metadata.lastUpdated}_
