--- a/content/projects/nfsuc-timetrial/main.mdx
+++ b/content/projects/nfsuc-timetrial/main.mdx
@@ -23,6 +23,7 @@ Please note that due to the broken nature of this game and its lack of quick rac
 - Ghosts are timed based on game ticks, meaning the timebug no longer applies anymore
 - Ghosts include a checksum of the player's game files, allowing you to check if someone's made any potentially unfair VLT modifications
 - Ghosts include player inputs, and while they're not directly usable for playback (the game is not deterministic) it can still be used to verify legitimacy
+- Support for Undercover Reformed, cleanly separating ghosts on the vanilla game and ghosts on Reformed, with the Most Wanted and The Run handling options further being separated
 - The mod includes a basic anti-cheat, preventing common methods of cheating
 - The physics tickrate has been locked to 120, meaning Widescreen Fix no longer gives you an unfair advantage
 
