--- a/content/projects/nfsc-timetrial/main.mdx
+++ b/content/projects/nfsc-timetrial/main.mdx
@@ -22,6 +22,7 @@ A mod for Need for Speed: Carbon that replaces Quick Race opponents with TrackMa
 - Ghosts are timed based on game ticks, meaning speedbreaker is timed in real-time, and the timebug no longer applies anymore
 - Ghosts include a checksum of the player's game files, allowing you to check if someone's made any potentially unfair VLT modifications
 - Ghosts include player inputs, and while they're not directly usable for playback (the game is not deterministic) it can still be used to verify legitimacy
+- Resetting your car will immediately restart the race, TrackMania style (can be turned off in the settings)
 - The mod includes a basic anti-cheat, preventing common methods of cheating
 - The physics tickrate has been locked to 120, meaning Widescreen Fix no longer gives you an unfair advantage
 - The World Detail setting no longer influences prop spawns, keeping everyone on a level playing field with reduced props without the usual lowered texture quality
@@ -33,3 +34,4 @@ This mod is also available for:
 - [NFS Undercover](https://gaycoderprincess.github.io/project/nfsuc-timetrial)
 
 _Last updated: {metadata.lastUpdated}_
+
