--- a/content/projects/nfsmw-timetrial/main.mdx
+++ b/content/projects/nfsmw-timetrial/main.mdx
@@ -1,5 +1,4 @@
-export const metadata = {
-    "image": "/img/mischeader.png",
+export const metadata = {    "image": "/img/mischeader.png",
     "miniImage": "/img/nfsmw-timetrial.png",
     "name": "Most Wanted Time Trial Ghosts",
     "lastUpdated": "2026-01-26 23:01",
@@ -21,6 +20,7 @@ A mod for Need for Speed: Most Wanted that replaces Quick Race opponents with Tr
 - Ghosts are timed based on game ticks, meaning speedbreaker is timed in real-time, and the timebug no longer applies anymore
 - Ghosts include a checksum of the player's game files, allowing you to check if someone's made any potentially unfair VLT modifications
 - Ghosts include player inputs, and while they're not directly usable for playback (the game is not deterministic) it can still be used to verify legitimacy
+- Resetting your car will immediately restart the race, TrackMania style (can be turned off in the settings)
 - The mod includes a basic anti-cheat, preventing common methods of cheating
 - The physics tickrate has been locked to 120, meaning Widescreen Fix no longer gives you an unfair advantage
 - The World Level Of Detail setting has been locked to a lower value, in order to keep everyone on a level playing field in regards to prop density
@@ -32,3 +32,4 @@ This mod is also available for:
 - [NFS Undercover](https://gaycoderprincess.github.io/project/nfsuc-timetrial)
 
 _Last updated: {metadata.lastUpdated}_
+
