--- a/content/projects/nfsmw-timetrial/main.mdx
+++ b/content/projects/nfsmw-timetrial/main.mdx
@@ -1,4 +1,5 @@
-export const metadata = {    "image": "/img/mischeader.png",
+export const metadata = {
+    "image": "/img/mischeader.png",
     "miniImage": "/img/nfsmw-timetrial.png",
     "name": "Most Wanted Time Trial Ghosts",
     "lastUpdated": "2026-01-26 23:01",
@@ -32,4 +33,5 @@ This mod is also available for:
 - [NFS Undercover](https://gaycoderprincess.github.io/project/nfsuc-timetrial)
 
 _Last updated: {metadata.lastUpdated}_
+
 
